# lark-cli

./: .gitignore  .home-lark  README.md  cr.md  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: pre-commit
apps/: .bashrc
apps/lark-agent/: AGENTS.md  README.md  next.config.ts  package.json  pnpm-lock.yaml
apps/lark-agent/app/: layout.tsx
apps/lark-agent/components/: AIOpsButton.tsx  ChatApp.tsx  ChatContainer.tsx  ChatInput.tsx  LoadingOverlay.tsx  MarkdownRenderer.tsx  MessageList.tsx  Sidebar.tsx  ai-ops-btn.tsx  chat-container.tsx  chat-input.tsx  msg-list.tsx
apps/lark-agent/hooks/: useChat.ts
apps/lark-code/: .env.example  README.md  eslint.config.js  package.json  pnpm-lock.yaml
apps/lark-code-go/: .air.toml  .gitignore  Makefile  README.md  go.mod  go.sum
apps/lark-code/scripts/: gen-protocol-doc.ts
apps/lark-code/src/: dev.ts
apps/lark-legacy/: package.json
apps/lark-legacy/src/: config.ts  index.tsx  logger.ts  settings.ts
apps/lark-legacy/tests/: settings.test.ts
apps/larky/: biome.json  eslint.config.js  lark-docs.config.ts  package.json  shims.d.ts  tsconfig.json  vite.config.ts
apps/larky-go/: .air.toml  .gitignore  LARKY.md  Makefile  README.md  go.mod  go.sum
apps/larky-py/: README.md  main.py  pyproject.toml
apps/larky/app/: boot.ts  index.html  main.css
apps/larky/docs/: ch1.md  ch2.md  ch3.md  ch4.md  ch5.md
apps/larky/src/: main.tsx
apps/larky/tests/: at-expand.test.ts  code-review.test.ts  (+12 more)
apps/marked-terminal/: package.json
glob-addon/: package.json
glob-wasm/: package.json
(+357 files in other folders)
