[project]
name = "larky-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.1",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "textual>=8.2.7",
    "websockets>=16.0",
]
